# syntax

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
src/syntax_backend/: Cargo.toml  syntax_backend.did
src/syntax_backend/src/: lib.rs  schema.rs  storage.rs
src/syntax_backend/src/schema/: cv.rs  grammar.rs  mod.rs
src/syntax_backend/src/service/: ai.rs  cv.rs  grammar.rs  mod.rs  util.rs
src/syntax_backend/src/storage/: cv.rs  grammar.rs
src/syntax_frontend/: index.html  package.json  vite.config.js
src/syntax_frontend/src/: App.jsx  index.module.css  main.jsx
src/syntax_frontend/src/components/Header/: Header.jsx  header.module.css
src/syntax_frontend/src/components/Sidebar_CV/: Sidebar.jsx  sidebar.module.css
src/syntax_frontend/src/components/Stepper/: Stepper.jsx
src/syntax_frontend/src/components/WelcomeNote/: Welcome.jsx  welcome.module.css
src/syntax_frontend/src/data/: stepper.json
src/syntax_frontend/src/views/: Identity_2.jsx
src/syntax_frontend/src/views/BioData/: BioData.jsx  biodata.module.css
src/syntax_frontend/src/views/EditCV/: EditCV.jsx  edit-cv.module.css
src/syntax_frontend/src/views/Grammar/: Grammar.jsx  grammar.module.css
src/syntax_frontend/src/views/NewCV/: NewCv.jsx  new-cv.module.css
src/syntax_frontend/src/views/NewProject/: NewProject.jsx  new-project.module.css
