[package]
name = "syntax_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.13.0"
ic-stable-memory = "0.4"
ic-stable-structures = "0.6.5"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.122"
hex = "0.4.3"